# app2020

./: .coverage  .flake8  .gitignore  LICENSE  noxfile.py  pyproject.toml  readme.md
src/app2020/: console.py  wikipedia.py
src/app2020.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tests/: conftest.py  test_console.py  test_wikipedia.py
