[tool.poetry]
name = "app2020"
version = "0.1.0"
description = ""
authors = ["leandrocl2005 <leandrocl2005@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"
pytest-mock = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
flake8 = "^3.8.3"
black = "^20.8b1"
flake8-black = "^0.2.1"
safety = "^1.9.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"

[tool.poetry.scripts]
app2020="app2020.console:main"
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["app2020"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
